# ChangeLog for net-fs/cvmfs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/cvmfs/ChangeLog,v 1.6 2013/08/16 21:46:43 bicatali Exp $

*cvmfs-2.1.14 (16 Aug 2013)

  16 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> +cvmfs-2.1.14.ebuild,
  -cvmfs-2.1.10.ebuild:
  Version bump

  09 Jul 2013; Sébastien Fabbro <bicatali@gentoo.org> cvmfs-2.1.12.ebuild:
  Add in source build for server case

*cvmfs-2.1.12 (09 Jul 2013)

  09 Jul 2013; Sébastien Fabbro <bicatali@gentoo.org> +cvmfs-2.1.12.ebuild:
  Version bump

  21 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> -cvmfs-2.0.19.ebuild,
  -files/cvmfs-2.0.19-autotools.patch, -files/cvmfs-2.0.19-no-redhat-init.patch,
  -files/cvmfs-2.0.19-openrc.patch, -files/cvmfs-2.0.19-spinlock.patch,
  -files/cvmfs.initd, -files/cvmfsd.confd, -files/cvmfsd.initd:
  Removed old, buggy init files

*cvmfs-2.1.10 (17 Jun 2013)

  17 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> +cvmfs-2.1.10.ebuild,
  +files/FindCARes.cmake, +files/Findleveldb.cmake,
  +files/cvmfs-2.1.10-no-config.patch, +files/cvmfs-2.1.10-openrc.patch:
  Version bump, could need more testing

*cvmfs-2.0.19 (30 Oct 2012)

  30 Oct 2012; Sébastien Fabbro <bicatali@gentoo.org> +cvmfs-2.0.19.ebuild,
  +files/cvmfs-2.0.19-autotools.patch,
  +files/cvmfs-2.0.19-no-redhat-init.patch, +files/cvmfs-2.0.19-openrc.patch,
  +files/cvmfs-2.0.19-spinlock.patch, +files/cvmfs.initd, +files/cvmfsd.confd,
  +files/cvmfsd.initd, +metadata.xml:
  Import from science overlay, version bump

  25 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> cvmfs-2.0.18.ebuild,
  files/cvmfs-2.0.18-openrc.patch, files/cvmfs.initd:
  net-fs/cvmfs: fixed client init and setup, added config stage

*cvmfs-2.0.18 (25 Jul 2012)

  25 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> +cvmfs-2.0.18.ebuild,
  +files/cvmfs-2.0.18-autotools.patch, +files/cvmfs-2.0.18-no-redhat-init.patch,