@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile config configure install prepare test
-DEPEND=dev-db/sqlite:3 dev-libs/openssl net-dns/c-ares net-misc/curl[adns] sys-libs/zlib client? ( dev-cpp/sparsehash dev-libs/leveldb sys-fs/fuse ) server? ( sys-libs/zlib ) virtual/pkgconfig doc? ( app-doc/doxygen[dot] ) sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
-DESCRIPTION=HTTP read-only file system for distributing software
-EAPI=5
-HOMEPAGE=http://cernvm.cern.ch/portal/filesystem
-IUSE=+client debug doc server
-LICENSE=BSD
-RDEPEND=dev-db/sqlite:3 dev-libs/openssl net-dns/c-ares net-misc/curl[adns] sys-libs/zlib client? ( dev-cpp/sparsehash dev-libs/leveldb sys-fs/fuse ) server? ( sys-libs/zlib ) client? ( net-fs/autofs ) server? ( www-servers/apache[ssl] )
-SLOT=0
-SRC_URI=https://ecsft.cern.ch/dist/cvmfs/cvmfs-2.1.12/cvmfs-2.1.12.tar.gz
-_eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	63afaaed8aa819fdcb814c7cd39495a2	flag-o-matic	2ff578fb151da221e1797f12e2990e72	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=e97846e6364274151deea1ed41aa143c
