@@ -4,9 +4,10 @@ DESCRIPTION=HTTP read-only file system for distributing software
 EAPI=5
 HOMEPAGE=http://cernvm.cern.ch/portal/filesystem
 IUSE=+client debug doc server
+KEYWORDS=~amd64 ~x86
 LICENSE=BSD
 RDEPEND=dev-db/sqlite:3 dev-libs/openssl net-dns/c-ares net-misc/curl[adns] sys-libs/zlib client? ( dev-cpp/sparsehash dev-libs/leveldb sys-fs/fuse ) server? ( sys-libs/zlib ) client? ( net-fs/autofs ) server? ( www-servers/apache[ssl] )
 SLOT=0
 SRC_URI=https://ecsft.cern.ch/dist/cvmfs/cvmfs-2.1.14/cvmfs-2.1.14.tar.gz
 _eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	63afaaed8aa819fdcb814c7cd39495a2	flag-o-matic	2ff578fb151da221e1797f12e2990e72	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=673b8a5c77a5c9d3d478035d8ae4402a
+_md5_=3e449e20b34c7a584f81dd89701c4b9d
