@@ -8,6 +8,6 @@ KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
 LICENSE=Boost-1.0
 RDEPEND=blas? ( virtual/blas ) jpeg? ( virtual/jpeg ) lapack? ( virtual/lapack ) png? ( media-libs/libpng ) X? ( x11-libs/libX11 )
 SLOT=0
-SRC_URI=mirror://sourceforge/dclib/dlib-18.0.tar.bz2
+SRC_URI=mirror://sourceforge/dclib/dlib-18.4.tar.bz2
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	flag-o-matic	2ff578fb151da221e1797f12e2990e72	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=f3f8f11983b76c033f53421bba81d40f
+_md5_=3f08b556f8c96a229b5d4d2ecc04e879
