@@ -5,16 +5,14 @@ AUX FindCARes.cmake 1272 SHA256 fd256e7d5375f9ac65f539ae6e8ff8d0b92c7e6dbd3b9c54
 AUX Findleveldb.cmake 1084 SHA256 d8f123d216310d38dd7f80e2d5c4b2d599a5fca4f221332927ac26890db8404b SHA512 ad195cfc953df1fe3f32ebaad2d1b5654fc23d7080ce9d719f92b389b47fc97d8a9281a3fd8137c2f718f1bd4e1f903c334fd9c192f61e0f3414d51ef9a5b40e WHIRLPOOL 8ee612d5327faf182e735caf5b05eb9aaf193e6cde5b55e93994455c4aeb792fd6fa12533d369b905388195e9f0d55ffd8e7044634f03750b9cf3e42011a198d
 AUX cvmfs-2.1.10-no-config.patch 327 SHA256 a994212e59a22faabcbef81a0b5b11235c057dd132980513039272312b71bca1 SHA512 99642d6044f1f3cdfd3382441b0f0f7d1d61a356b0cde34fdd70bfb73e968221e011ef69211d15c862b003b7771d6a7e7bbb6e6cbe462362f21ef345476aafaa WHIRLPOOL 02281b828efb9a51ca824e4ed6764d1f0e1a511b35bda127c761b5283ac0491c7fb46826817e3c6d3c524ddd5cd2d3de022dd511d11e6af119880ec811869863
 AUX cvmfs-2.1.10-openrc.patch 1663 SHA256 fe7963d86f077320d5eacc0fd286666087bb0ca9fb09937c56bca08b53dbdfab SHA512 bba6927b93244ecf61760d41a53c82b8f286f0f8daf3e7d4677438eee9603a25a216fa4204e32d8cdc733ad37102f7d440afc6261737d490022fdc4abee04d32 WHIRLPOOL 550358e224eecfe6291a3361f35d96ea4b72b09e77b6c58926fc547ef2d85fd458737c4bb8c94b480658440eca27441821aca03dd57aa2faa8f3a355bf654c58
-DIST cvmfs-2.1.12.tar.gz 12960786 SHA256 b5bffde2c177671e3f65d9ff348015cf992fa113f82154c32a23e48ac53fd942 SHA512 29359b61a9a2c829d194bb489f7b11dabf8cbaa900f726551c43246d08b18111ad6f7a80cf8c9917ed8f3d8ca7d0ee0f5e6b6b113e4d955014f935a6049267a5 WHIRLPOOL cdc65213d2dab3e7a37c8dc06d01934337c24c6c4817172a26a2a0e745dd823112da579172b84ba16cadfef98b91944ab4281e4dfec2ec879ba1ade5e15d11f4
 DIST cvmfs-2.1.14.tar.gz 12960947 SHA256 3be0446f29d23417b3a30684d9ed73fc0a73c11952d9aecf63748ed61d5b9cd3 SHA512 e67067fdce6cef076af41959a89b44b64942ac8d87b14bcdf7c9e7920cf4303dd8dd81eaf94849c5cddb9e858d947bfa22fc185771a8dac845214b1d56e9fa89 WHIRLPOOL 83a033b28cd1fe7fb6f2e79082cf10636f351fc47a00bce5ed19299c29145b9143c9da643ac466ef3812bcad2f476040f8bcdc48754b9d52c6b151d731057fca
-EBUILD cvmfs-2.1.12.ebuild 1947 SHA256 764a72549c85bc762e8d69ac52256660ce9ee5e693742beaa90d42f0e5d24836 SHA512 da712581bf4a5cec5fc154bf3509100fc5bd61a421fd59db3a3388ae593e9d9850aaa7c5145bc9ff115e420d82f3f62425679be43be9501dd4e2ec5b13531cd9 WHIRLPOOL 0ae1b1c60f34f263e69257027440b0927531dedf9dd26c88b610c5a728be673be7d9ac2502ff436878d78dca94a501c8c6adec9e470089a4f176f8e9f77df776
-EBUILD cvmfs-2.1.14.ebuild 1948 SHA256 85213696ecee8311dc053ad99e66ebcd8887c8180075882f4bea68e829db39b4 SHA512 37e8964b753cea6459043603b2dc7cc06469be738850f4d91de44a8ce3f2c991d8064f9527244d230d8dba94b4d6019d69c1851b2a3489cf2b41846ba81c9a1e WHIRLPOOL fb6787ce0365f6942cc59d95b0a8714215934ed11d713fbb4d5c66fd1119dda556c412fa35d15893bcbf064766392ef30bc43dc1352406ebee49d74f0bc538ab
-MISC ChangeLog 2190 SHA256 8f8c058377e4668638c6d880a0c376e5149ed5bbdceb33735e47b2b36f7c4b1a SHA512 3a4ba565a1dd5387a43a7d903657e1024a2799b73680c9dba5a9f141483e04979a82dbfd0c189c1059a18a8b431ebcde71224688940df8c4846427f4bf44fdb1 WHIRLPOOL ad6f09807be7ef8f6a87fc81edbe5896b41f51542041fa282c12e2fbec2e28e687fb18ff502bb5411aff155a02a9c7e8d16d1dd1af9785e24c983e407adc7327
+EBUILD cvmfs-2.1.14.ebuild 1971 SHA256 b2b8792e5bbb2d402ba205e74d9fef4209e206ba6ba92c4761d39635455b29ca SHA512 81274d875892f91c1759b1954791300bea8bc4e2d1743d7ca519fb251dd868d93a0f0d136d79d293e528d38ff6a7b1ce89a0ebee45bb79e7f2246ba0523813b5 WHIRLPOOL 5a951052d6b82868dc201501b1426346003bd86aa97d86ffef68777fd522b91b3c82b613f82cc977a8d43cc763a6ed5b75be81c1c821f4ec2fffc4f47efaaf4f
+MISC ChangeLog 2316 SHA256 6e82f90c5e263e08a6dec6ec1af61e51465bf45bbe755d7d32c75933eb5f25d4 SHA512 9c1a279dc94485eed9643c06c583ec963840ef83da7250155d4facc0bbbd6dba6ebfe045a8cb349cf310637325e73f92066cd91ea13571ce7b046e62559c9b83 WHIRLPOOL d3f1d662fe042726f6b2bc0224eae67753e03e6acbdfe2bb1b0093c3ed5fb663858be1092923668f365b0dbf9d111bf978fe2cf08e57c144a2433a7fc9744591
 MISC metadata.xml 962 SHA256 8e663c6e3488bdb8cf49d7a3f03549fe093597522e25dd61a4cdde390ccc0091 SHA512 ad7ae2a380fabb7a3d65d04318e084f2e19310e6a4c22abf2f23ecf90cffd8be762fc93e26e3f4d7ddd05a168baca4cf903d7bff7f87d0dbe7dfc5c57b303b9d WHIRLPOOL bfd28004471a97a1a708ad42b84bd0aad99a9eb94fb200dc39986d3eaacfccf767fda17712533a217e623031dca0f1fb2e5bf3ba2ced122d9014d7cd11c8f7fc
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iEYEAREIAAYFAlIOnckACgkQ1ycZbhPLE2DxHACfYZvHESy5EfdqK1HyVnhjuzFD
-9DQAnRUjw+96+7EUVOggEU7Fuj1PSdh0
-=2+Z1
+iEYEAREIAAYFAlIt+YQACgkQ1ycZbhPLE2APXgCfSasfaypCex6HXe0bDW8TDPbX
+1gkAn3WwJQAJklPy2yidXumvZdLU71Td
+=Leqe
 -----END PGP SIGNATURE-----
