@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/cvmfs/cvmfs-2.1.14.ebuild,v 1.1 2013/08/16 21:46:43 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/cvmfs/cvmfs-2.1.14.ebuild,v 1.2 2013/09/09 16:34:54 bicatali Exp $
 
 EAPI=5
 
@@ -15,6 +15,7 @@ SRC_URI="https://ecsft.cern.ch/dist/${PN}/${P}/${P}.tar.gz"
 LICENSE="BSD"
 SLOT="0"
 
+KEYWORDS="~amd64 ~x86"
 IUSE="+client debug doc server"
 
 CDEPEND="
