@@ -2,18 +2,16 @@
 Hash: SHA256
 
 AUX dlib-17.48-makefile-test.patch 1013 SHA256 cf45d4f77525aa33342710705c5fc4024229042768d076b6ca7729c1173683fe SHA512 a1f608db8c630f82ed8839e49c4346117fb554cef680b40549a007fc8587ef576deb3ce2f79274f98a8557e94d4c61fdda6884d1a8e4661e8dfa779f812aceed WHIRLPOOL b3e11e1f0ed1d56dead0dabe19365f99d96fdfb378e5b9e7e09380fd18a0cecb256a4c938099dd11baaae17d6b2028c5eb2697ca37cac02343b2b07bff6f4727
-DIST dlib-17.49.tar.bz2 2820202 SHA256 3b60ae79e7f0ea0860bc2b3ce09fba9a117dfecf87ec6573ca582f46d9bcb506 SHA512 558d8dd86f20675b8a65f0f2bd978480cd71772028e25851653dd7e08e90ab49908f1dcd8d47369e0ad2eeb5f505c09d0bb626b2f51afc6ac0a8892a9e0b162c WHIRLPOOL 1bb16f6d7b63d4c0d090f12b116b1f8972cc181dd0f8e40faa76e925de02c407bfb292053ca2829bb9771ee097bf7ab6c71f1ac721aa47240479098b6ce175da
-DIST dlib-18.0.tar.bz2 2947421 SHA256 e31f4bf8166b0e1d9f22fb2c5399b442c8a5016c496fa9481a7ab39edcb31d37 SHA512 a7c696706e6655b6a31eb412c1c28dfce6e928e434c571eaa7efcfddecce9321db75f694544c2dca558881d0740a37633bee29cce0ca6869f2716a9c7597926a WHIRLPOOL 4d55b39d86af96397582a358d139be0e2329c20d154878489be1fa2e55e52882ecb3be57055916f06426dd4f2f5e0dd25619f5580090e35445332306c6f4ddab
 DIST dlib-18.3.tar.bz2 3158862 SHA256 5542102fa51aac11799b1cea9ddbaf5fe6e384175aa75afdf51c485c772e53c1 SHA512 8e213955beac1c8da3d92010060727d0ed74c6f438d7e74ec3940b660cfe47004f789eb31bd2485b0c36b5235b7ce52b9a921cbe1358ad8f60ef790b7399809c WHIRLPOOL 15bf615faf634c42ad78e02067145a7579383b562e9b9c1078a82d9adfa6a7123cba98c35983dc4a8addf9b789c4602fe236677b7713e8b3caa941800ee260d6
-EBUILD dlib-17.49.ebuild 1095 SHA256 abe51b0c684e7eaaf5e1daa83b2d44b4dc743322bb969292acc323a230b46fc7 SHA512 8b87d68bccfeb52c8f0ee0c03506f28ea420a5e4e6a26f55e36f763f478ea78e963043ee75551f59d57f296c872bc4edf35952037b827eb4d64ba36d4badf7b8 WHIRLPOOL f665e6d0d7d7925584194e5c323f2203c732ca80fc9eb8c4f0e7fb51c12301e72d7f562da1cd16b76dd4e9bfcc3b23de3ce2a7b2c1a9ec05694eba5182d1be2b
-EBUILD dlib-18.0.ebuild 1078 SHA256 cd8f61e7424286eb11bfefe116de49d2c335c9f68f226a0b330da194c92c260a SHA512 c3110a6f5ffa2ea881f09a9d4327594787e02a108b254c2b8892f2852fc18372d668bb2f0aef8c5953ee1032689748204ed59abab1707da3e4b66ed115aea5a9 WHIRLPOOL 478ae504656cbde4be19300675bd59e37386455225cfa296cb1b3ed995d844339f2acc728082d9a800819151ba7b29d3cdc8f57c344bee04290304612e7d6dfa
+DIST dlib-18.4.tar.bz2 3393090 SHA256 481b94cbd2d330b93b4461d1dc2848cc49a766710f7158054c2a1a9aba3d4452 SHA512 c452cd39c6761ec2c454bbaa8604a66db37794c4554ceeb1e7cf52d064dc90501b73504c05bb3c36295fc9b5b0c8a1e6a371edc9df67894a46d06266c1aae0f8 WHIRLPOOL 4547f6e44791ea11167089bad67945c9e3a4b3ffd633e0d26e56febf9c9a21a98e2f8f81f99e985013ce6a8b804b432281e722920ae2dfe15e9f273bcdc64627
 EBUILD dlib-18.3.ebuild 1078 SHA256 7df2ab58db3f92ff0f5625cdff9ab943e2931f64fdb59ae1ee98f174f20d7d0f SHA512 477d73fb240407ac379ec0f90af75dab7df692ad31e614b786541ee9bf7d97158212a1726e156171c36dd29e3d8f12571c78789c7105a55c6cd59c3f0e33c936 WHIRLPOOL 7403a82c1d20a1f242f44b962bfabbeaa07fc8cc553040e74d6fd1b433bbf03c1c0681777076177ffbbc96a7fa7ea00e5f4b52563675d669f6864b92f5f5588c
-MISC ChangeLog 1088 SHA256 6d844ca7d9742731c745e295452a732f7a4852d3ed7edae27755fa4615191858 SHA512 8afc696f5c668a3e436866dd337187b79e851a252c9dbe12127330fabb04d2e8bf8c7347677772f82cd7491b7b7e974ccd5145b85ae072bbe8d111bc379c8855 WHIRLPOOL 05dd46896646f037ba11fc6a363c11b330882d75f83efdefb485b49bb110ce9941e97977086a90f946d93fcf48d351c662ac1a9a32eb732ef5ff75bec9938328
+EBUILD dlib-18.4.ebuild 1078 SHA256 d202808d2092a02f988a6bf94cb573d4ec1ff1eec0ffd1bae9484c5fd0f7c217 SHA512 1bd2613cce11af31cce874d88f1b0ebe4a582c774bdf7b12efc96aa72172866262465a6850f55cfcb50013eb4e57b9f53715f424909a111e27508379616227f2 WHIRLPOOL 10708c95160a5767638ff56d2ba041f8dda15c80617bc44b76cf4e4caaa007e821795ed20e3065fda3905710d23ba0feb702840990f040e18ab42bf236e42a6f
+MISC ChangeLog 1245 SHA256 cc454f0097b5dc1783fa15896cf0ae09b3c213baccc22538069f2f7d0f7aa130 SHA512 a940687ddf91e3606bf0a2be7a9866bff4125d8d8b6bed5ddded80ac11eb3f68a20f81f39fa41f922dc6d70be3ab9e2f209603674836ed8818aa5e2a933f41ea WHIRLPOOL cf424f370fb513ebaba2834e03b4e6046c97077f1220502dc2b9b4057610ef819e6dc8b59e6b07608c3215412606c8538d242ce21a561791b4fa06a474e5e852
 MISC metadata.xml 464 SHA256 1a4da5ef4e777fd52db22e7e2b01b2c4cf13be449e22f833373f09c3688a8d90 SHA512 55def7692c3d74337a354cac20f4f5585569f9d9772d07f835331c56659b211d8ef7d211f352c496e7805bbb10ff6a4d4298658f126859719409107b883d4239 WHIRLPOOL eb86f46f5e5f7368b7c66be4e408ba5417245aa47fb6c8f15bc3b56bebb9fd0e3abd3c3e23ec365b0f3b1f9da76ae84a32d372b8c9bb3373e2a14f954cd0d64e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iEYEAREIAAYFAlHtXvQACgkQ1ycZbhPLE2D9igCeKDiU9g89LwsSJTlZNxBhQMmK
-hykAn2Ql0Q0WeB7KZIHYA1vcxCbhu7v1
-=dJzA
+iEYEAREIAAYFAlIt/c0ACgkQ1ycZbhPLE2A/aQCeOIhjJyyGXxSZZqeDmH/PE1RI
+xAgAoK4FeY8AXlnk7C+nB3FpW6NMKhAx
+=xQyS
 -----END PGP SIGNATURE-----
