@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/dlib
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/dlib/ChangeLog,v 1.6 2013/07/22 16:33:52 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/dlib/ChangeLog,v 1.7 2013/09/09 16:56:44 bicatali Exp $
+
+*dlib-18.4 (09 Sep 2013)
+
+  09 Sep 2013; Sébastien Fabbro <bicatali@gentoo.org> +dlib-18.4.ebuild,
+  -dlib-17.49.ebuild, -dlib-18.0.ebuild:
+  Version bump
 
 *dlib-18.3 (22 Jul 2013)
 
