@@ -1,6 +1,10 @@
 # ChangeLog for net-fs/cvmfs
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/cvmfs/ChangeLog,v 1.6 2013/08/16 21:46:43 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/cvmfs/ChangeLog,v 1.7 2013/09/09 16:34:54 bicatali Exp $
+
+  09 Sep 2013; Sébastien Fabbro <bicatali@gentoo.org> -cvmfs-2.1.12.ebuild,
+  cvmfs-2.1.14.ebuild:
+  Keyworded, removed old
 
 *cvmfs-2.1.14 (16 Aug 2013)
 
